fix 50+ cut off 🤞

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -927,7 +927,8 @@
 	}
 	
 	.fact-counter.style-two .column .inner .content{
-		padding-left:0px;
+		padding-top: 25px;
+		padding-left: 0px;
 	}
 	
 	.fact-counter.style-two .column .inner .count-outer{
